--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="js/bootstrap.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400|Source+Code+Pro" rel="stylesheet">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114157717-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-114157717-1');
+</script>
+
 </head>
 
 <body>
